Fix sonarcloud issues (#11)
* Fix issue related to parsing csv file

* fix sonarcloud issues

Co-authored-by: Vladyslav Buhaiets <vladyslav.buhaiets@eleks.com>